--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,31 @@ services:
   nsqlookupd:
     container_name: local-nsqlookupd
     image: nsqio/nsq
-    command: /nsqlookupd  
+    command: >
+      /nsqlookupd
+      --broadcast-address=127.0.0.1
     ports:
-      - "4160"
-      - "4161"
+      - "4160:4160"
+      - "4161:4161"
   nsqd:
     container_name: local-nsqd
     image: nsqio/nsq
-    command: /nsqd --lookupd-tcp-address=nsqlookupd:4160
+    command: >
+      /nsqd 
+      --broadcast-address=127.0.0.1
+      --lookupd-tcp-address nsqlookupd:4160
     depends_on:
       - nsqlookupd
     ports:
-      - "4150"
-      - "4151"
+      - "4150:4150"
+      - "4151:4151"
   nsqadmin:
     container_name: local-nsqadmin
     image: nsqio/nsq
-    command: /nsqadmin --lookupd-http-address=nsqlookupd:4161
+    command: >
+      /nsqadmin
+      --lookupd-http-address nsqlookupd:4161
     depends_on:
       - nsqlookupd  
     ports:
-      - "4171"
+      - "4171:4171"
